# z-wave-nvm-migration-tool

./: .gitattributes  .gitignore  CHANGES.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  code_of_conduct.md  helper.mk  sonar-project.properties  zwave_data_description_scheme.json  zwave_nvm_tool.c  zwave_nvm_tool_version.h  zwave_nvm_tool_version.h.in
.github/: CODEOWNERS
.github/workflows/: 04-TruffleHog-Security-Scan.yml  analyze.yml  build-rootfs.yml  build.yml  cla.yml  test.yml
cmake/include/: add_mock.cmake  cmock_config.yml
cmake/modules/: FindCMock.cmake  FindJsonC.cmake  FindNVM3lib.cmake
tests/: CMakeLists.txt  test.sh
tests/controllerlib/: CMakeLists.txt  test_controller_nvm.c  test_nvm3_helpers.c
tests/controllerlib/zwave/: CMakeLists.txt  test_ZW_nodemask.c
tests/libs/: CMakeLists.txt
tests/libs/app_utils/: CMakeLists.txt  test_base64.c  test_user_message.c
tests/libs/json_helpers/: CMakeLists.txt  test_json_helpers.c
tests/libs/json_upgrade/: CMakeLists.txt  test_json_upgrade.c
tests/mock/: json_helpers.h  nvm3_stubs.h
zw_nvm_converter/: CMakeLists.txt  nvmconv_main.c  nvmconv_main.h
zw_nvm_converter/controllerlib_7.xx/: CMakeLists.txt  api_wrappers.c  controller_nvm.c  controller_nvm.h  nvm3_helpers.c  nvm3_helpers.h
zw_nvm_converter/controllerlib_7.xx/zwave/: ZW_nodemask.c  ZW_nodemask_api.h  ZW_transport_api_small.h  zwave_controller_application_info_storage.h  zwave_controller_network_info_storage.h
zw_nvm_converter/include/: controllerlib_api.h
zw_nvm_converter/libs/: CMakeLists.txt
zw_nvm_converter/libs/app_utils/: CMakeLists.txt  base64.c  base64.h  user_message.c  user_message.h
zw_nvm_converter/libs/bin2hex/: CMakeLists.txt  bin2hex.c  bin2hex.h
zw_nvm_converter/libs/json_helpers/: CMakeLists.txt  endian_wrap.h  json_helpers.c  json_helpers.h
zw_nvm_converter/libs/json_upgrade/: CMakeLists.txt  json_upgrade.c  json_upgrade.h
zw_nvm_converter/nvm3lib/platform/emdrv/nvm3/config/: nvm3_config.h
